--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 blis==0.4.1
+boto==2.49.0
 catalogue==1.0.0
 certifi==2020.6.20
 chardet==3.0.4
@@ -6,6 +7,7 @@ click==7.1.2
 cymem==2.0.3
 dj-database-url==0.5.0
 Django==2.1
+django-heroku==0.3.1
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
 gunicorn==20.0.4
 idna==2.10
@@ -16,6 +18,8 @@ numpy==1.19.2
 oauthlib==3.1.0
 plac==1.1.3
 preshed==3.0.2
+psycopg2==2.8.6
+psycopg2-binary==2.8.6
 PySocks==1.7.1
 python-decouple==3.3
 pytz==2020.1
@@ -34,5 +38,4 @@ tqdm==4.50.2
 tweepy==3.9.0
 urllib3==1.25.11
 wasabi==0.8.0
-
-boto~=2.49.0
+whitenoise==5.2.0
