--- a/requirements.txt
+++ b/requirements.txt
@@ -30,8 +30,8 @@ scikit-learn==0.23.2
 scipy==1.5.4
 six==1.15.0
 sklearn==0.0
-spacy==2.3.2
-srsly==1.0.4
+spacy>=2.2.0,<3.0.0
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.0/en_core_web_sm-2.2.0.tar.gz#egg=en_core_web_smsrsly==1.0.4
 thinc==7.4.1
 threadpoolctl==2.1.0
 tqdm==4.52.0
@@ -39,3 +39,4 @@ tweepy==3.9.0
 urllib3==1.26.2
 wasabi==0.8.0
 whitenoise==5.2.0
+
