--- a/Pipfile
+++ b/Pipfile
@@ -15,7 +15,7 @@ nltk = "*"
 scikit-learn = "*"
 tweepy = "*"
 boto = "*"
-en-core-web-sm = {file = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.0/en_core_web_sm-2.2.0.tar.gz"}
+en-core-web-sm = "*"
 
 [requires]
 python_version = "3.8"
