--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ cymem==2.0.4
 dj-database-url==0.5.0
 Django==2.1
 django-heroku==0.3.1
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.0/en_core_web_sm-2.2.0.tar.gz
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
 gunicorn==20.0.4
 idna==2.10
 joblib==0.17.0
@@ -30,8 +30,7 @@ scikit-learn==0.23.2
 scipy==1.5.4
 six==1.15.0
 sklearn==0.0
-spacy>=2.2.0,<3.0.0
--e git+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz#egg=en_core_web_sm
+spacy==2.3.2
 srsly==1.0.4
 thinc==7.4.1
 threadpoolctl==2.1.0
