--- a/Pipfile
+++ b/Pipfile
@@ -15,7 +15,7 @@ nltk = "*"
 scikit-learn = "*"
 tweepy = "*"
 boto = "*"
-en_core_web_sm = "*"
+en_core_web_sm = {file = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz"}
 
 [requires]
 python_version = "3.8"
