--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ nltk = "*"
 scikit-learn = "*"
 tweepy = "*"
 boto = "*"
+pipenv = "2020.11.15"
 en_core_web_sm = {file = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz"}
 
 [requires]
